# matts-python-package-template

./: .pre-commit-config.yaml  .spellcheck-allowlist  README.md  ci-test-17350572057.txt  cookiecutter.json  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci-post-sync-versions.yml  ci.yml  dependabot-recreate-on-conflict.yml  sync-versions.yml  update-precommit.yml
example-package/: .pre-commit-config.yaml  README.md  pyproject.toml
example-package/.github/workflows/: ci.yml  update-precommit.yml
example-package/tests/: test_example_package.py
scripts/: configure.sh  sync_precommit.py  sync_versions.py
tests/: test_create_package.py
{{ cookiecutter.project_slug }}/: .pre-commit-config.yaml  LICENSE  pyproject.toml
{{ cookiecutter.project_slug }}/.github/workflows/: ci.yml  update-precommit.yml
{{ cookiecutter.project_slug }}/scripts/: update.sh
{{ cookiecutter.project_slug }}/tests/: test_{{ cookiecutter.package_name }}.py
