[tool.poetry]
name = "matts-python-package-template"
version = "0.0.1"
description = "Matt's Python Package Template"
authors = ["Matt Krainski <mateusz@krainski.eu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
cookiecutter = "^2.6.0"


[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
darglint = "^1.8.1"
flake8 = "^7.3.0"
flake8-bandit = "^4.1.1"
flake8-bugbear = "^25.11.29"
flake8-builtins = "^3.1.0"
flake8-comprehensions = "^3.17.0"
flake8-docstrings = "^1.7.0"
flake8-eradicate = "^1.5.0"
flake8-spellcheck = "^0.28.0"
pep8-naming = "^0.15.1"
flake8-pyproject = "^1.2.4"
black = "^25.12.0"
flake8-black = "^0.4.0"
isort = "^7.0.0"
coverage = "^7.13.0"
pre-commit = "^4.5.1"
flake8-isort = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 88
dictionaries = ["en_US", "python", "technical"]
builtins-ignorelist = ["id"]
ignore = ["D104", "D100", "D101", "D106"]
per-file-ignores = """
    tests/**: S101
"""
whitelist = ".spellcheck-allowlist"
strictness = "long"

[tool.isort]
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88
profile = "black"
known_first_party = []

[tool.poe]
envfile = ".env"

[tool.poe.tasks]
configure = "./scripts/configure.sh"
update = "./scripts/update.sh"
sync-versions = "python scripts/sync_versions.py"
sync-precommit = "python scripts/sync_precommit.py"
lint = "flake8 tests scripts"
test = 'coverage run -m pytest --showlocals tests'
hooks-run = "pre-commit run --all-files"
hooks-update = "pre-commit autoupdate"

[tool.poe.tasks.test-full]
sequence = [
  { ref = "test" }
]
